# Sonic-Anywhere

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  unpack_s1disasm_resources.py
config/: config.h
include_backend/: audio.h  debug.h  input.h  interrupt.h  macroutils.h  mdaudio.h  mdcolor.h  mdinput.h  mdmem.h  mdsystem.h  mdvdp.h  mem.h  system.h  tinyint.h  vdp.h  vpu.h
src/: audio.c  audio.h  bytearray.c  bytearray.h  compressors.h  fade.c  fade.h  game_build_sprites.c  gamevdp.c  gamevdp.h  gamevdp.vblankinterrupts.c  object_map.h  objects.c  objects.h  plc.c  plc.h  sprite_buffer.c  sprite_buffer.h
src/compressors/: enigma.c  kosinski.c  nemesis.c
src/gamemode/: game.c  game.h  gamemode_sega.c  gamemode_title.c
src/mappings/: credits.c  sprite_mapping.c  sprite_mapping_type.h  sprite_piece.h
src/objects/: obj_sonic_team_8a.c  obj_title_screen_sonic_0e.c
src/resources/: resourceid.h  resourcestore.c  resourcestore.h
src_backend/include/: debug.h  tinyint.h
src_backend/src_desktop/: debug.c
src_backend_desktop/: audio.c  debug.c  input.c  main.c  mdcolor.c  mem.c  plc.c  system.c  text_renderer.c  text_renderer.h  vdp.c  vpu.c
src_backend_desktop/shaders/: fragment_shader.glsl
src_s1disasm_assets/: s1disasm_assets.h
tests/: compresseddata.h  kosinski_data.h  main.c
tests/lib/: test_framework.c  test_framework.h
